nerdctl needs to be installed in agent for vulnerability scan #111

--- a/deepfence_backend/dockerify/api/Dockerfile
+++ b/deepfence_backend/dockerify/api/Dockerfile
@@ -37,7 +37,8 @@ ENV PYTHONUNBUFFERED=1 \
     REDIS_PORT=6379 \
     REDIS_DB_NUMBER=0 \
     PYTHONPATH=/app/code \
-    DOCKERVERSION=20.10.8
+    DOCKERVERSION=20.10.8 \
+    AUTHLIB_INSECURE_TRANSPORT=true
 
 COPY ./requirements.txt /tmp/requirements.txt
 
