--- a/deepfence_agent/supervisord.conf
+++ b/deepfence_agent/supervisord.conf
@@ -27,3 +27,13 @@ startsecs=0
 stopwaitsecs=30
 killasgroup=true
 priority=10
+
+[program:vulnerability_sbom_plugin]
+command=bash -c "rm -rf /tmp/vulnerability_sbom_plugin.sock && /home/deepfence/bin/vulnerability-sbom-plugin -socket-path /tmp/vulnerability_sbom_plugin.sock"
+numprocs=1
+autostart=true
+autorestart=true
+startsecs=0
+stopwaitsecs=30
+killasgroup=true
+priority=10
