Add scan metadata in the request to start vulnerability scan #106

--- a/deepfence_agent/supervisord.conf
+++ b/deepfence_agent/supervisord.conf
@@ -29,7 +29,7 @@ killasgroup=true
 priority=10
 
 [program:vulnerability_sbom_plugin]
-command=bash -c "rm -rf /tmp/vulnerability_sbom_plugin.sock && /home/deepfence/bin/vulnerability-sbom-plugin -socket-path /tmp/vulnerability_sbom_plugin.sock"
+command=bash -c "rm -rf /tmp/vulnerability_sbom_plugin.sock && /home/deepfence/bin/vulnerability-sbom-plugin -socket-path /tmp/vulnerability_sbom_plugin.sock -mode grpc-server"
 numprocs=1
 autostart=true
 autorestart=true
