--- a/deepfence_backend/dockerify/haproxy/haproxy.cfg
+++ b/deepfence_backend/dockerify/haproxy/haproxy.cfg
@@ -50,9 +50,6 @@ frontend port_443
     acl is_fetcher_api path -i -m beg /df-api
     use_backend fetcher-api-8006 if is_fetcher_api
 
-    acl is_clair path -i -m beg /fetcher
-    use_backend deepfence-fetcher-8001 if is_clair
-
     default_backend deepfence-ui-4042
 
 backend deepfence-ui-4042
@@ -132,7 +129,7 @@ backend vulnerability-mapper-8001
     http-response set-header Cross-Origin-Resource-Policy "same-origin" unless is_dev_build
     http-response set-header Cross-Origin-Opener-Policy "same-origin" unless is_dev_build
     http-response set-header Cross-Origin-Embedder-Policy "require-corp" unless is_dev_build
-    server s1 deepfence-vulnerability-mapper:8001 ssl verify none
+    server s1 deepfence-vulnerability-mapper:8001
 
 backend fetcher-api-8006
     mode http
@@ -163,13 +160,6 @@ backend fetcher-api-8006
     # http-response set-header X-Permitted-Cross-Domain-Policies "none"
     # http-response set-header Access-Control-Allow-Headers "Origin, X-Requested-With, Content-Type, Accept, Authorization, deepfence-key, x-hosts, cache-control"
     server s1 deepfence-fetcher:8006 ssl verify none
-
-backend deepfence-fetcher-8001
-    mode http
-    http-request lua.deepfence-key-verify
-    http-request deny unless { var(txn.authorized) eq "true" } || { var(txn.authorized) eq "not_enabled" }
-    server s1 deepfence-fetcher:8001 ssl verify none
-
 
 backend options_method_handler
     mode http
