Use http local server to host vulnerability db

--- a/deepfence_backend/dockerify/haproxy/haproxy.cfg
+++ b/deepfence_backend/dockerify/haproxy/haproxy.cfg
@@ -159,7 +159,7 @@ backend fetcher-api-8006
     # http-response set-header Content-Security-Policy "default-src 'self'"
     # http-response set-header X-Permitted-Cross-Domain-Policies "none"
     # http-response set-header Access-Control-Allow-Headers "Origin, X-Requested-With, Content-Type, Accept, Authorization, deepfence-key, x-hosts, cache-control"
-    server s1 deepfence-fetcher:8006 ssl verify none
+    server s1 deepfence-fetcher:8006
 
 backend options_method_handler
     mode http
