--- a/deepfence_agent/tools/apache/fluentbit/td-agent-bit.conf
+++ b/deepfence_agent/tools/apache/fluentbit/td-agent-bit.conf
@@ -83,6 +83,30 @@
 
 [INPUT]
     Name tail
+    Path ${DF_INSTALL_DIR}/var/log/fenced/vulnerability-scan/*.log
+    Tag vulnerability-scan
+    storage.type filesystem
+    Buffer_Chunk_Size 4K
+    Mem_Buf_Limit 5MB
+    Refresh_Interval 10
+    Skip_Long_Lines On
+    DB ${DF_INSTALL_DIR}/home/deepfence/fluentbit/vulnerability-scan.db
+    Parser json
+
+[INPUT]
+    Name tail
+    Path ${DF_INSTALL_DIR}/var/log/fenced/vulnerability-scan-log/*.log
+    Tag vulnerability-scan-log
+    storage.type filesystem
+    Buffer_Chunk_Size 4K
+    Mem_Buf_Limit 5MB
+    Refresh_Interval 10
+    Skip_Long_Lines On
+    DB ${DF_INSTALL_DIR}/home/deepfence/fluentbit/vulnerability-scan-scan.db
+    Parser json
+
+[INPUT]
+    Name tail
     Path ${DF_INSTALL_DIR}/var/log/fenced/secret-scan/*.log
     Tag secret-scan
     storage.type filesystem
@@ -152,6 +176,30 @@
     Skip_Long_Lines On
     DB ${DF_INSTALL_DIR}/home/deepfence/fluentbit/malware-scan-log.db
     Parser json
+
+[OUTPUT]
+    Name  deepfence
+    Match vulnerability-scan
+    Id vulnerability-scan
+    Schema https
+    Console_host ${MGMT_CONSOLE_URL}
+    Console_port ${MGMT_CONSOLE_PORT}
+    Path /deepfence/ingest/vulnerabilities
+    Token ${DEEPFENCE_KEY}
+    #cert_file ${DF_INSTALL_DIR}/etc/td-agent-bit/fluentbit-client.crt
+    #key_file ${DF_INSTALL_DIR}/etc/td-agent-bit/fluentbit-client.key
+
+[OUTPUT]
+    Name  deepfence
+    Match vulnerability-scan-log
+    Id vulnerability-scan-log
+    Schema https
+    Console_host ${MGMT_CONSOLE_URL}
+    Console_port ${MGMT_CONSOLE_PORT}
+    Path /deepfence/ingest/vulnerabilities-scan-log
+    Token ${DEEPFENCE_KEY}
+    #cert_file ${DF_INSTALL_DIR}/etc/td-agent-bit/fluentbit-client.crt
+    #key_file ${DF_INSTALL_DIR}/etc/td-agent-bit/fluentbit-client.key
 
 [OUTPUT]
     Name  deepfence
