--- a/deployment-scripts/docker-compose.yml
+++ b/deployment-scripts/docker-compose.yml
@@ -132,9 +132,9 @@ services:
     networks:
     - deepfence_net
     restart: always
-    #    ports:
-    #    - "127.0.0.1:9000:9000"
-    #    - "127.0.0.1:9090:9090"
+    ports:
+    - "127.0.0.1:9000:9000"
+    - "127.0.0.1:9090:9090"
     volumes:
     - deepfence_file_server:/data:rw
     logging:
@@ -241,26 +241,26 @@ services:
       driver: "json-file"
       options:
         max-size: "1g"
-  
-  deepfence-package-scanner:
-    container_name: deepfence-package-scanner
-    image: ${IMAGE_REPOSITORY:-deepfenceio}/deepfence_package_scanner_ce:${DF_IMG_TAG:-1.4.1}
-    ulimits:
-      core: 0
-    restart: always
-    networks:
-    - deepfence_net
-    environment:
-      MGMT_CONSOLE_URL: "deepfence-internal-router"
-      MGMT_CONSOLE_PORT: "443"
-      PACKAGE_SCAN_CONCURRENCY: "5"
-    entrypoint: /usr/local/bin/package-scanner
-    command: ["-mode", "http-server", "-port", "8005"]
-    logging:
-      driver: "json-file"
-      options:
-        max-size: "1g"
-  
+
+  # deepfence-package-scanner:
+  #   container_name: deepfence-package-scanner
+  #   image: ${IMAGE_REPOSITORY:-deepfenceio}/deepfence_package_scanner_ce:${DF_IMG_TAG:-1.4.1}
+  #   ulimits:
+  #     core: 0
+  #   restart: always
+  #   networks:
+  #   - deepfence_net
+  #   environment:
+  #     MGMT_CONSOLE_URL: "deepfence-internal-router"
+  #     MGMT_CONSOLE_PORT: "443"
+  #     PACKAGE_SCAN_CONCURRENCY: "5"
+  #   entrypoint: /usr/local/bin/package-scanner
+  #   command: ["-mode", "http-server", "-port", "8005"]
+  #   logging:
+  #     driver: "json-file"
+  #     options:
+  #       max-size: "1g"
+
   deepfence-kafka-broker:
     image: ${IMAGE_REPOSITORY:-deepfenceio}/deepfence_kafka_broker_ce:${DF_IMG_TAG:-1.3.0}
     hostname: deepfence-kafka-broker
