--- a/deepfence_server/Dockerfile
+++ b/deepfence_server/Dockerfile
@@ -42,17 +42,21 @@ ENV DEEPFENCE_POSTGRES_USER_DB_HOST=deepfence-postgres \
 ADD deepfence_server/auth /auth
 ADD golang_deepfence_sdk/utils/postgresql /usr/local/postgresql-migrate
 COPY deepfence_server/entrypoint.sh /entrypoint.sh
-RUN apk add --no-cache --update bash curl libpcap tar kafkacat
-RUN apk add --no-cache postgresql-client --repository=https://dl-cdn.alpinelinux.org/alpine/v3.14/main
+
+RUN apk add --no-cache --update bash curl libpcap tar kafkacat && \
+    apk add --no-cache postgresql-client --repository=https://dl-cdn.alpinelinux.org/alpine/v3.14/main
+
 RUN chmod +x /entrypoint.sh
-RUN curl -L "https://github.com/golang-migrate/migrate/releases/latest/download/migrate.linux-amd64.tar.gz" | tar xvz
-RUN mv migrate /usr/local/bin/migrate
-RUN chmod +x /usr/local/bin/migrate
-RUN cd /usr/local/share/
-RUN wget https://github.com/swagger-api/swagger-ui/archive/refs/tags/v4.15.5.tar.gz -O /usr/local/share/swagger-ui.tar.gz
-RUN tar -xzf /usr/local/share/swagger-ui.tar.gz -C /usr/local/share/
-RUN mv /usr/local/share/swagger-ui-4.15.5/dist /usr/local/share/swagger-ui
-RUN rm -rf /usr/local/share/swagger-ui.tar.gz /usr/local/share/swagger-ui-4.15.5
+
+RUN curl -L "https://github.com/golang-migrate/migrate/releases/latest/download/migrate.linux-amd64.tar.gz" | tar xvz && \
+    mv migrate /usr/local/bin/migrate && \
+    chmod +x /usr/local/bin/migrate
+
+RUN cd /usr/local/share/ && \
+    wget https://github.com/swagger-api/swagger-ui/archive/refs/tags/v4.15.5.tar.gz -O /usr/local/share/swagger-ui.tar.gz && \
+    tar -xzf /usr/local/share/swagger-ui.tar.gz -C /usr/local/share/ && \
+    mv /usr/local/share/swagger-ui-4.15.5/dist /usr/local/share/swagger-ui && \
+    rm -rf /usr/local/share/swagger-ui.tar.gz /usr/local/share/swagger-ui-4.15.5
 
 COPY --from=build /go/deepfence_server/deepfence_server /usr/local/bin/deepfence_server
 
